--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 80px 300px 180px;
+    grid-template-rows: 80px 420px 180px;
     justify-items: center;
 }
 
@@ -19,6 +19,10 @@ body{
 .center {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+}
+
+b {
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .game{
@@ -33,4 +37,3 @@ body{
     grid-row: 3 / 4;
     text-align: center;
 }
-
