--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 80px 440px 180px;
+    grid-template-rows: 60px 400px 220px;
     justify-items: center;
 }
 
@@ -19,6 +19,10 @@ body{
 .center {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+}
+
+.center p {
+    margin: 12px 0px 12px 0px;
 }
 
 b {
@@ -36,4 +40,8 @@ b {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
     text-align: center;
+}
+
+.marg{
+    margin: 25px 0px -5px 0px;
 }
