--- a/style.css
+++ b/style.css
@@ -8,14 +8,19 @@ body{
 .wrapper{
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 60px 400px 220px;
     justify-items: center;
 }
 
 .head{
+    align-self: center;
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+}
+
+.description{
+    text-align: center;
 }
 
 .center {
